--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "gatsby": "^2.18.17",
     "gatsby-remark-copy-linked-files": "^2.1.36",
+    "gatsby-remark-katex": "^3.1.23",
     "gatsby-theme-dox": "*",
     "hast-util-to-text": "^1.0.1",
+    "katex": "^0.11.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rehype-details": "^1.0.0",
